fix: changed anchor links to a visible color

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -40,6 +40,7 @@ body {
 
 .v-application {
   a {
+    color: #0d47a1 !important;
     text-decoration: none;
   }
   code,
